fixed spacing with social icons home

--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ a:focus {
   .masthead {
     background-position: 20%;
   }
-  #largeText {
+  #largeText {s
     font-size: 400%;
   }
   #smallText {
